--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -3,3 +3,9 @@ global:
   scrape_timeout: 30s
 
 scrape_configs:
+  - job_name: 'Whmcs-Tickets'
+    static_configs:
+      - targets: ['Whmcs-TicketExporter']
+
+    scrape_timeout: 30s
+    scrape_interval: 5m
