--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -5,7 +5,7 @@ global:
 scrape_configs:
   - job_name: 'Whmcs-Tickets'
     static_configs:
-      - targets: ['Whmcs-TicketExporter']
+      - targets: ['whmcs-ticketexporter:80']
 
     scrape_timeout: 30s
     scrape_interval: 5m
