--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
         restart: unless-stopped
         volumes:
             - ./grafana/provisioning/:/etc/grafana/provisioning
+            - grafana-data:/var/lib/grafana
         environment:
             - GF_AUTH_ANONYMOUS_ENABLED=false
             - GF_SECURITY_ADMIN_USER=${GF_USERNAME}
@@ -40,6 +41,7 @@ services:
 
 volumes:
     prom-data:
+    grafana-data:
 
 networks:
     edge-proxy:
