--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -6,6 +6,67 @@ scrape_configs:
   - job_name: 'Whmcs-Tickets'
     static_configs:
       - targets: ['whmcs-ticketexporter:80']
-
     scrape_timeout: 30s
     scrape_interval: 5m
+
+scrape_configs:
+  - job_name: 'blackbox_dns'
+    metrics_path: /probe
+    params:
+      module: [dns_query]
+    static_configs:
+      - targets:
+          - 8.8.4.4
+          - 8.8.8.8
+          - 1.1.1.1
+          - 1.0.0.1
+          - 9.9.9.9
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - source_labels: [__address__]
+        regex: "neteye-exporter-pshgmn.*"
+        target_label: datacenter
+        replacement: "Datacenter-1"
+      - source_labels: [__address__]
+        regex: "neteye-exporter-mbn.*"
+        target_label: datacenter
+        replacement: "Datacenter-2"
+    static_configs:
+      - targets:
+          - neteye-exporter-pshgmn.mastkhiar.xyz
+          - neteye-exporter-mbn.mastkhiar.xyz
+
+  - job_name: 'blackbox_http'
+    metrics_path: /probe
+    params:
+      module: [http_2xx]
+    static_configs:
+      - targets:
+          - https://playstation.com/
+          - https://wikipedia.org/
+          - https://bing.com/
+          - https://google.com/
+          - https://github.com/
+          - https://aparat.com/
+          - https://divar.ir/
+          - https://digikala.com/
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - source_labels: [__address__]
+        regex: "neteye-exporter-pshgmn.*"
+        target_label: datacenter
+        replacement: "Datacenter-1"
+      - source_labels: [__address__]
+        regex: "neteye-exporter-mbn.*"
+        target_label: datacenter
+        replacement: "Datacenter-2"
+    static_configs:
+      - targets:
+          - neteye-exporter-pshgmn.mastkhiar.xyz
+          - neteye-exporter-mbn.mastkhiar.xyz
