--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,12 +1,12 @@
 global:
-  scrape_interval: 45s
+  scrape_interval: 5m
   scrape_timeout: 30s
 
 scrape_configs:
   - job_name: 'Whmcs-Tickets'
     static_configs:
       - targets: ['whmcs-ticketexporter:80']
-    scrape_timeout: 30s
+    scrape_timeout: 50s
     scrape_interval: 5m
 
   - job_name: 'blackbox_http_pshgmn'
@@ -49,4 +49,4 @@ scrape_configs:
         target_label: instance
       - target_label: __address__
         replacement: neteye-exporter-pshgmn.mastkhiar.xyz
-        
+
