--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -3,13 +3,19 @@ global:
   scrape_timeout: 30s
 
 scrape_configs:
-  - job_name: 'Whmcs-Tickets'
+  - job_name: "Whmcs-Tickets"
     static_configs:
-      - targets: ['whmcs-ticketexporter:80']
+      - targets: ["whmcs-ticketexporter:80"]
     scrape_timeout: 50s
     scrape_interval: 5m
 
-  - job_name: 'blackbox_http_pshgmn'
+  - job_name: "QuantumBerry"
+    scrape_interval: 15s
+    scrape_timeout: 10s
+    static_configs:
+      - targets: ["QuantumBerry.shitlab.local:9110"]
+
+  - job_name: "blackbox_http_pshgmn"
     metrics_path: /probe
     params:
       module: [http_2xx]
@@ -31,7 +37,7 @@ scrape_configs:
       - target_label: __address__
         replacement: neteye-exporter-pshgmn.mastkhiar.xyz
 
-  - job_name: 'blackbox_dns_pshgmn'
+  - job_name: "blackbox_dns_pshgmn"
     metrics_path: /probe
     params:
       module: [dns_query]
@@ -49,4 +55,3 @@ scrape_configs:
         target_label: instance
       - target_label: __address__
         replacement: neteye-exporter-pshgmn.mastkhiar.xyz
-
