--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -3,9 +3,16 @@ global:
   scrape_timeout: 30s
 
 scrape_configs:
-  - job_name: "Whmcs-Tickets"
+
+#  - job_name: "Whmcs-Tickets"
+#    static_configs:
+#      - targets: ["whmcs-ticketexporter:80"]
+#    scrape_timeout: 50s
+#    scrape_interval: 5m
+
+  - job_name: "Whmcs"
     static_configs:
-      - targets: ["whmcs-ticketexporter:80"]
+      - targets: ["whmcs-exporter:80"]
     scrape_timeout: 50s
     scrape_interval: 5m
 
@@ -13,7 +20,7 @@ scrape_configs:
     scrape_interval: 15s
     scrape_timeout: 10s
     static_configs:
-      - targets: ["QuantumBerry.shitlab.local:9110"]
+      - targets: ["172.16.101.250:9110"]
 
   - job_name: "blackbox_http_pshgmn"
     metrics_path: /probe
