--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,52 +1,135 @@
 services:
+  prometheus:
+    image: prom/prometheus:v3.9.1
+    container_name: prometheus-${HOSTNAME}
+    hostname: prometheus-${HOSTNAME}
+    restart: unless-stopped
 
-    prometheus:
-        image: prom/prometheus
-        container_name: prometheus
-        restart: unless-stopped
-        command:
-            - '--config.file=/etc/prometheus/prometheus.yml'
-        volumes:
-            - ./prometheus:/etc/prometheus
-            - prom-data:/prometheus
-        healthcheck:
-          test: ["CMD", "wget", "-q", "--spider", "http://localhost:9090/-/ready"]
-          interval: 30s
-          timeout: 10s
-          retries: 3
-        networks:
-            - edge-proxy
-            - exporters
-        labels:
-          traefik.http.routers.prometheus.rule: "Host(`${PROMETHEUS_HOST}`)"
-          traefik.docker.network: "edge-proxy"
+    mem_limit: 512m
+    mem_reservation: 256m
+    cpus: 0.50
 
-    grafana:
-        image: grafana/grafana
-        container_name: grafana
-        restart: unless-stopped
-        volumes:
-            - ./grafana/provisioning/:/etc/grafana/provisioning
-            - grafana-data:/var/lib/grafana
-        environment:
-            - GF_AUTH_ANONYMOUS_ENABLED=false
-            - GF_SECURITY_ADMIN_USER=${GF_USERNAME}
-            - GF_SECURITY_ADMIN_PASSWORD=${GF_PASSWORD}
-        networks:
-            - edge-proxy
-        labels:
-          traefik.http.routers.grafana.rule: "Host(`${GRAFANA_HOST}`)"
-          traefik.http.routers.pubgrafana.rule: "Host(`${PUB_GRAFANA_HOST}`)"
-          traefik.docker.network: "edge-proxy"
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--storage.tsdb.retention.time=15d"
+      - "--storage.tsdb.retention.size=5GB"
+      - "--web.enable-lifecycle"
+
+    volumes:
+      - prometheus-data:/prometheus
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+
+    read_only: true
+    tmpfs:
+      - /tmp
+
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:9090/-/ready"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+    networks:
+      - webproxy
+
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=webproxy"
+
+      # Prometheus UI (HTTPS)
+      - "traefik.http.routers.prometheus.rule=Host(`${PROM_SUB:-prometheus}.${DOMAIN}`)"
+      - "traefik.http.routers.prometheus.entrypoints=websecure"
+      - "traefik.http.routers.prometheus.tls.certresolver=le"
+      - "traefik.http.routers.prometheus.middlewares=ip-whitelist,web-auth"
+      - "traefik.http.routers.prometheus.service=prometheus"
+
+      # Prometheus UI (HTTP -> HTTPS)
+      - "traefik.http.routers.prometheus-http.rule=Host(`${PROM_SUB:-prometheus}.${DOMAIN}`)"
+      - "traefik.http.routers.prometheus-http.entrypoints=web"
+      - "traefik.http.routers.prometheus-http.middlewares=ip-whitelist,force-https,web-auth"
+      - "traefik.http.routers.prometheus-http.service=prometheus"
+
+      # Service
+      - "traefik.http.services.prometheus.loadBalancer.server.port=9090"
+
+  grafana:
+    image: grafana/grafana:12.3
+    container_name: grafana-${HOSTNAME}
+    hostname: grafana-${HOSTNAME}
+    restart: unless-stopped
+
+    mem_limit: 512m
+    mem_reservation: 256m
+    cpus: 0.50
+
+    volumes:
+      - grafana-data:/var/lib/grafana
+      - ./grafana/provisioning/:/etc/grafana/provisioning
+
+    environment:
+      - GF_AUTH_ANONYMOUS_ENABLED=false
+      - GF_AUTH_DISABLE_LOGIN_FORM=false
+      - GF_USERS_ALLOW_SIGN_UP=false
+
+      - GF_SECURITY_ADMIN_USER=${GF_USERNAME}
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_PASSWORD}
+
+      - GF_SERVER_ROOT_URL=https://${GRAF_SUB:-grafana}.${DOMAIN}
+      - GF_SERVER_SERVE_FROM_SUB_PATH=false
+
+      - GF_SECURITY_COOKIE_SECURE=true
+      - GF_SECURITY_COOKIE_SAMESITE=strict
+
+    read_only: true
+    tmpfs:
+      - /tmp
+
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+    networks:
+      - webproxy
+
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=webproxy"
+
+      # Grafana UI (HTTPS)
+      - "traefik.http.routers.grafana.rule=Host(`${GRAF_SUB:-grafana}.${DOMAIN}`)"
+      - "traefik.http.routers.grafana.entrypoints=websecure"
+      - "traefik.http.routers.grafana.tls.certresolver=le"
+      - "traefik.http.routers.grafana.service=grafana"
+
+      # Grafana UI (HTTP -> HTTPS)
+      - "traefik.http.routers.grafana-http.rule=Host(`${GRAF_SUB:-grafana}.${DOMAIN}`)"
+      - "traefik.http.routers.grafana-http.entrypoints=web"
+      - "traefik.http.routers.grafana-http.service=grafana"
+
+      # Service
+      - "traefik.http.services.grafana.loadBalancer.server.port=3000"
 
 volumes:
-    prom-data:
-    grafana-data:
+  prometheus-data:
+    name: prometheus-data
+  grafana-data:
+    name: grafana-data
 
 networks:
-    edge-proxy:
-        name: edge-proxy
-        external: true
-    exporters:
-        name: exporters
-        external: true
+  webproxy:
+    external: true
