--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,64 +1,30 @@
+# ================================
+# Prometheus Configuration
+# ================================
+
 global:
-  scrape_interval: 5m
-  scrape_timeout: 30s
+  scrape_interval: 30s
+  scrape_timeout: 10s
+  evaluation_interval: 30s
+
+# ================================
+# Scrape Configurations
+# ================================
 
 scrape_configs:
 
-#  - job_name: "Whmcs-Tickets"
-#    static_configs:
-#      - targets: ["whmcs-ticketexporter:80"]
-#    scrape_timeout: 50s
-#    scrape_interval: 5m
-
-  - job_name: "Whmcs"
-    static_configs:
-      - targets: ["whmcs-exporter:80"]
-    scrape_timeout: 50s
-    scrape_interval: 5m
-
-  - job_name: "QuantumBerry"
-    scrape_interval: 15s
-    scrape_timeout: 10s
-    static_configs:
-      - targets: ["172.16.101.250:9110"]
-
-  - job_name: "blackbox_http_pshgmn"
-    metrics_path: /probe
-    params:
-      module: [http_2xx]
-    static_configs:
-      - targets:
-          - https://www.playstation.com/
-          - https://www.wikipedia.org/
-          - https://www.bing.com/
-          - https://google.com/
-          - https://github.com/
-          - https://www.aparat.com/
-          - https://divar.ir/
-          - https://www.digikala.com/
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - target_label: __address__
-        replacement: neteye-exporter-pshgmn.mastkhiar.xyz
-
-  - job_name: "blackbox_dns_pshgmn"
-    metrics_path: /probe
-    params:
-      module: [dns_query]
-    static_configs:
-      - targets:
-          - 8.8.4.4
-          - 8.8.8.8
-          - 1.0.0.1
-          - 1.1.1.1
-          - 9.9.9.9
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - target_label: __address__
-        replacement: neteye-exporter-pshgmn.mastkhiar.xyz
+  # --------------------------------------------------
+  # SAMPLE JOB
+  # --------------------------------------------------
+  #
+  # - job_name: "example-node-exporter"
+  #
+  #   # Override global interval if needed
+  #   scrape_interval: 15s
+  #   scrape_timeout: 10s
+  #
+  #   static_configs:
+  #     - targets:
+  #         - "node-exporter:9100"
+  #
+  # --------------------------------------------------
