--- a/grafana/provisioning/datasources/datasource.yml
+++ b/grafana/provisioning/datasources/datasource.yml
@@ -2,9 +2,24 @@ apiVersion: 1
 
 datasources:
   - name: Prometheus
-    type: prometheus
     uid: prometheus
-    url: http://prometheus:9090
+    type: prometheus
+
+    orgId: 1
     isDefault: true
+
     access: proxy
-    editable: true
+    url: http://prometheus:9090
+
+    editable: false
+    version: 1
+
+    jsonData:
+      httpMethod: POST
+      manageAlerts: true
+      prometheusType: Prometheus
+      prometheusVersion: 3.0.0
+      queryTimeout: 60s
+      timeInterval: 30s
+
+    secureJsonData: {}
