--- a/grafana/provisioning/datasources/datasource.yml
+++ b/grafana/provisioning/datasources/datasource.yml
@@ -23,3 +23,11 @@ datasources:
       timeInterval: 30s
 
     secureJsonData: {}
+
+  - name: Loki
+    type: loki
+    uid: loki
+    url: http://loki:3100
+    isDefault: false
+    access: proxy
+    editable: false
