--- a/loki/config.yml
+++ b/loki/config.yml
@@ -1,51 +1,44 @@
-auth_enabled: true
+auth_enabled: false
 
 server:
   http_listen_port: 3100
-  http_grpc_port: 9095
   log_level: info
 
-# ---------------------------------------
-# Ingesters handle incoming log streams
-# ---------------------------------------
-ingester:
-  lifecycler:
-    address: 127.0.0.1
-    ring:
-      kvstore:
-        store: inmemory
-      replication_factor: 1
-  chunk_idle_period: 5m
-  chunk_retain_period: 30s
-  max_transfer_retries: 0
+common:
+  path_prefix: /loki
+
+  # simple in-memory ring for single-node
+  ring:
+    kvstore:
+      store: inmemory
+    replication_factor: 1
 
 # ---------------------------------------
 # Storage settings
 # ---------------------------------------
 storage_config:
-  boltdb_shipper:
-    active_index_directory: /loki/index
-    cache_location: /loki/cache
-    shared_store: filesystem
-
   filesystem:
     directory: /loki/chunks
+
+  tsdb_shipper:
+    active_index_directory: /loki/index
+    cache_location: /loki/cache
+    cache_ttl: 24h
 
 schema_config:
   configs:
     - from: 2020-10-24
-      store: boltdb-shipper
+      store: tsdb
       object_store: filesystem
-      schema: v11
+      schema: v13
       index:
         prefix: index_
-        period: 168h
+        period: 24h
 
 # ---------------------------------------
 # Limits
 # ---------------------------------------
 limits_config:
-  enforce_metric_name: false
   reject_old_samples: true
   reject_old_samples_max_age: 168h
   max_streams_per_user: 10000
@@ -57,5 +50,11 @@ table_manager:
   retention_deletes_enabled: true
   retention_period: 720h # 30 days
 
-chunk_store_config:
-  max_look_back_period: 168h
+# ---------------------------------------
+# Compactor for retention cleanup
+# ---------------------------------------
+compactor:
+  working_directory: /tmp/loki/retention
+  retention_enabled: true
+  retention_delete_delay: 2h
+  delete_request_store: filesystem
